--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
-
 :root {
   --color-bg: rgb(47, 62, 70);
   --color-bg-alt: rgb(53, 79, 82);
@@ -23,6 +13,17 @@
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  transition: var(--transition);
 }
 
 html {
@@ -90,6 +91,10 @@ a {
 a:hover,
 a:focus {
   color: var(--color-white);
+}
+
+svg {
+  transition: none;
 }
 
 .btn {
